src/objects/ACCA_Service_Request__c.object
<CustomObject>
    <description>Used to ensure that all data requried for ACCA is submitted when an ACCA service request is escalated to ACCA.</description>
    <fields>
        <fullName>ACCA_Service_Request_Subject__c</fullName>
        <formula>ACCA_Service_Request__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACCA Service Request Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCA_Service_Request__c</fullName>
        <label>ACCA Service Request</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>ACCA Service Requests</relationshipLabel>
        <relationshipName>ACCA_Service_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Requirements__c</fullName>
        <label>Additional Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Address_1__c</fullName>
        <label>Admin Address 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Email__c</fullName>
        <label>Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Admin_phone__c</fullName>
        <label>Admin Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Administration_Contact__c</fullName>
        <label>Administration Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Code_1__c</fullName>
        <inlineHelpText>Enter value &apos;ALL&apos; if it applies to ALL Agents.</inlineHelpText>
        <label>Agent Code 1</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Code_2__c</fullName>
        <inlineHelpText>Enter value &apos;ALL&apos; if it applies to ALL Agents.</inlineHelpText>
        <label>Agent Code 2</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Code_3__c</fullName>
        <inlineHelpText>Enter value &apos;ALL&apos; if it applies to ALL Agents.</inlineHelpText>
        <label>Agent Code 3</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Group__c</fullName>
        <label>Agent Group</label>
        <picklist>
            <picklistValues>
                <fullName>AU AMEXAU1 AMEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU AMXRTL1 AMEX REP OFFICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU ATAC001 ATAC001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU BTIAUS1 BTIHOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU CANHOT1 CANHOT1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU CARLSO1 Carlson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU CONAUS1 CONCORDE TRAVEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU CONSAU1 CONSOLIDATED TAVEL GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU CORPTM1 Corporate Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU CREAT01 Creative Tours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU CTPART1 CTPART1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU CTSAUS1 China Travel Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU FLIGHT1 Flight Centres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU FLIGHT2 Flight Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU HARVEY1 Harvey World Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU HRVRTL1 Harvey World Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU HVYQLD1 Harvey World Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU INTMEL1 IntMel1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU INTRAV1 Intrav1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU INTSYD1 INTSYD1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU JETSET1 JETSET1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU MPTRAV1 MPTRAV1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU NATION1 Agent Nation1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU ORIENT1 Orient Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU PARTHN1 Parthenon Travel Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU SBTAUS1 SBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU SHOWHO1 SHOWHOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU STAGES1 Stage &amp; Screen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU STAHOT1 STAHOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU SYNERG1 SYNERGI HOT GROUP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Airline_Code__c</fullName>
        <label>Airline Numeric Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airline_Daily_HOT__c</fullName>
        <label>Airline Daily HOT?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Airline_Name__c</fullName>
        <label>Airline Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ACCA_Service_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BSP_Concerned__c</fullName>
        <label>BSP Concerned</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BSP_Ret_Error_Report__c</fullName>
        <label>BSP Ret Error Report?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_HOT__c</fullName>
        <label>Billing HOT?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Period_From__c</fullName>
        <label>Billing Period From</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Period_To__c</fullName>
        <label>Billing Period To</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Report__c</fullName>
        <label>Billing Report?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CC_Number_Length__c</fullName>
        <label>CC Number Length</label>
        <picklist>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSI_Format__c</fullName>
        <label>CSI Format</label>
        <picklist>
            <picklistValues>
                <fullName>AEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AXA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AXB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AXC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AXD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSI_Frequency__c</fullName>
        <label>CSI Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>B - Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Daily</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSI_Version__c</fullName>
        <label>CSI Version</label>
        <picklist>
            <picklistValues>
                <fullName>090</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>203</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_Part_Three_Input__c</fullName>
        <label>Comments Part Three Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Part_Three_Output__c</fullName>
        <label>Comments Part Three Output</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Part_Two__c</fullName>
        <label>Comments Part Two</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Acquirer_2__c</fullName>
        <label>Credit Card Acquirer 2</label>
        <picklist>
            <picklistValues>
                <fullName>AD - ADP Cardclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP - ADP Cardclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEXP - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ - ANZ Cardlink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC - UATP (ATCAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUA - Poland ???</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAN - BANKSERVISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCR - BCR ROMCARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNZC - Bank of New Zealand - CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOICC - Bank of Ireland (Elavon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Malaysia Standard Chartered Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR - ADP CardClear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEK - CEKAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITY - Citibank CCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Global Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBSC - Deutsche Bank (CC Acquirer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCD - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCE - Diners Club EUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF - Diners Club EUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCL - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCN - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIN - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMPOR - Commercial Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETHNK - National Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU - Euroconnex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Acquirer_3__c</fullName>
        <label>Credit Card Acquirer 3</label>
        <picklist>
            <picklistValues>
                <fullName>AD - ADP Cardclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP - ADP Cardclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEXP - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ - ANZ Cardlink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC - UATP (ATCAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUA - Poland ???</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAN - BANKSERVISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCR - BCR ROMCARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNZC - Bank of New Zealand - CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOICC - Bank of Ireland (Elavon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Malaysia Standard Chartered Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR - ADP CardClear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEK - CEKAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITY - Citibank CCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Global Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBSC - Deutsche Bank (CC Acquirer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCD - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCE - Diners Club EUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF - Diners Club EUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCL - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCN - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIN - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMPOR - Commercial Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETHNK - National Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU - Euroconnex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Acquirer_4__c</fullName>
        <label>Credit Card Acquirer 4</label>
        <picklist>
            <picklistValues>
                <fullName>AD - ADP Cardclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP - ADP Cardclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEXP - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ - ANZ Cardlink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC - UATP (ATCAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUA - Poland ???</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAN - BANKSERVISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCR - BCR ROMCARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNZC - Bank of New Zealand - CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOICC - Bank of Ireland (Elavon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Malaysia Standard Chartered Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR - ADP CardClear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEK - CEKAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITY - Citibank CCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Global Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBSC - Deutsche Bank (CC Acquirer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCD - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCE - Diners Club EUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF - Diners Club EUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCL - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCN - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIN - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMPOR - Commercial Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETHNK - National Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU - Euroconnex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Acquirer__c</fullName>
        <label>Credit Card Acquirer</label>
        <picklist>
            <picklistValues>
                <fullName>AD - ADP Cardclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP - ADP Cardclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMEXP - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ - ANZ Cardlink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC - UATP (ATCAN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUA - Poland ???</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAN - BANKSERVISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCR - BCR ROMCARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BNZC - Bank of New Zealand - CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOICC - Bank of Ireland (Elavon)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - Malaysia Standard Chartered Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR - ADP CardClear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEK - CEKAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITY - Citibank CCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT - Global Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBSC - Deutsche Bank (CC Acquirer)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCD - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCE - Diners Club EUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF - Diners Club EUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCL - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCN - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCS - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIN - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMPOR - Commercial Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETHNK - National Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU - Euroconnex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Request__c</fullName>
        <label>Requested Action</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terminate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type_2__c</fullName>
        <label>Credit Card Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>AX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC - Eurocard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JC - JCB International Credit Card Company (AKA Japan Credit Bureau)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP - UATP (Universal Air Travel Plan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI - Visa Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, pls specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type_3__c</fullName>
        <label>Credit Card Type 3</label>
        <picklist>
            <picklistValues>
                <fullName>AX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC - Eurocard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JC - JCB International Credit Card Company (AKA Japan Credit Bureau)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP - UATP (Universal Air Travel Plan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI - Visa Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, pls specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type_4__c</fullName>
        <label>Credit Card Type 4</label>
        <picklist>
            <picklistValues>
                <fullName>AX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC - Eurocard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JC - JCB International Credit Card Company (AKA Japan Credit Bureau)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP - UATP (Universal Air Travel Plan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI - Visa Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, pls specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <picklist>
            <picklistValues>
                <fullName>AX - American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA - MasterCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC - Diners Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC - Eurocard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JC - JCB International Credit Card Company (AKA Japan Credit Bureau)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TP - UATP (Universal Air Travel Plan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI - Visa Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, pls specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distribute_the_output_file_via__c</fullName>
        <label>Distribute the output file via</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_Rate_1__c</fullName>
        <inlineHelpText>This is a percentage field with 2 decimals. Please enter percentage as for example 7, or 7.5.</inlineHelpText>
        <label>Domestic Rate 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Domestic_Rate_2__c</fullName>
        <inlineHelpText>This is a percentage field with 2 decimals. Please enter percentage as for example 7, or 7.5.</inlineHelpText>
        <label>Domestic Rate 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_1__c</fullName>
        <label>End 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_2__c</fullName>
        <label>End 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_3__c</fullName>
        <label>End 3</label>
        <type>Date</type>
    </fields>
</CustomObject>